[package]
name = "rust_game_huarong_dao"
version = "0.1.0"
authors = ["WindySha<834828088@qq.com>"]
edition = "2021"

[dependencies]
bracket-lib = { git = "https://github.com/amethyst/bracket-lib", rev = "0d2d5e6a"}
#bracket-lib = "~0.8.7"
rand="0.8.5"
getrandom = { version = "0.2.10", features = ["js"] }


[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys="0.3.64"
wasm-bindgen="0.2.87"